ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST= \
  adms.css           \
  adms.xml           \
  admsstyle.xsl      \
  admst.dtd          \
  admst.xml          \
  admstpath.xml      \
  admstpathstyle.xsl \
  admststyle.xsl     \
  metaadms.dtd       \
  metaadmst.dtd      \
  metaadmstpath.dtd

SUBDIRS=scripts images admsXml

CLEANFILES=*\~ .*.swp
