ACLOCAL_AMFLAGS = -I m4

extra = \
  bootstrap.sh    \
  create_files.sh \
  CMakeLists.txt  \
  README.md       \
  README-NGSPICE


EXTRA_DIST= \
  adms.css           \
  adms.xml           \
  admsstyle.xsl      \
  admst.dtd          \
  admst.xml          \
  admstpath.xml      \
  admstpathstyle.xsl \
  admststyle.xsl     \
  metaadms.dtd       \
  metaadms.xsd       \
  metaadmst.dtd      \
  metaadmst.xsd      \
  metaadmstpath.dtd  \
  metaadmstpath.xsd  \
  $(extra)

SUBDIRS=scripts images admsXml

CLEANFILES=*\~ .*.swp
