EXTRA_DIST= \
  admstvariables.xml      \
  analogfunction.va       \
  analogfunction.xml      \
  arobavariable.xml       \
  attributes.xml          \
  blockvariables.xml      \
  croixvariable.xml       \
  dependency.xml          \
  getargv.xml             \
  getenv.xml              \
  getinstance.xml         \
  html_params.xml \
  gettransform.xml        \
  sort.xml                \
  strutils.xml            \
  vlatommlMODULE.htm.xml  \
  vlatovla.xml \
  xyceBasicTemplates.xml
